# cxx_modules_converter

./: .gitignore  LICENSE  README.md  cxx_modules_converter.py  cxx_modules_converter_lib.py  cxx_modules_converter_lib_test.py  pyproject.toml
test_data/compat/expected/: simple.cpp  simple.cppm  simple.h
test_data/compat/expected/subdir/: simple2.cpp  simple2.cppm  simple2.h
test_data/compat/input/subdir/: simple2.cpp  simple2.h
test_data/header/expected/: simple.cpp
test_data/inext/input/: simple.cpp
test_data/named1/expected/: simple.cpp  simple.cppm
test_data/named1/input/: simple.h
test_data/outext/expected/: simple.cxx
test_data/outext/input/: simple.cpp
test_data/prefix/expected/subdir/: simple.cpp  simple.cppm
test_data/prefix/input/subdir/: simple.cpp  simple.h
test_data/prefix_named/expected/subdir/: local_include.cppm  simple.cpp  simple.cppm
test_data/prefix_named/input/subdir/: simple.h
test_data/simple/expected/: simple.cpp  simple.cppm
test_data/skip/expected/subdir1/: simple1.cppm
test_data/subdir/expected/subdir1/: simple2.cppm
test_data/subdirs/expected/subdir1/subdir2/: simple1.cppm  simple2.cppm
test_data/subdirs_rooted/expected/subdir/subdir1/: simple2.cppm  use_relative_include.cppm  (+2 more)
test_data/subdirs_rooted_brackets/expected/subdir/: simple1.cppm
test_data/subdirs_rooted_brackets/expected/subdir2/: simple_existing.cppm
test_data/subdirs_rooted_brackets/input/subdir2/: simple_existing.h
test_data/twice/expected/: simple.cpp  simple.cppm
test_data/two/expected/: simple1.cppm  simple2.cppm
(+18 files in other folders)
