[project]
name = "cxx-modules-converter"
version = "0.1.3"
description = "Convert C++20 modules to headers and headers to modules"
authors = [
    {name = "Alexander Petrov", email = "zowers@zowers.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
cxx_modules_converter = "cxx_modules_converter:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

